# esp32-rtp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  idf.bat  partitions.csv  sdkconfig  sdkconfig.defaults  usb_switch_integration_plan.md
.github/workflows/: build.yml
components/netham45__TS3USB30ERSWR/: CMakeLists.txt  TS3USB30ERSWR.c  idf_component.yml
components/netham45__TS3USB30ERSWR/include/: TS3USB30ERSWR.h
components/netham45__bq25895/: CMakeLists.txt  Kconfig  README.md  bq25895.c  bq25895_integration.c  bq25895_json.c  idf_component.yml
components/netham45__bq25895/include/: bq25895.h  bq25895_integration.h  bq25895_json.h
components/netham45__ntp/: CMakeLists.txt  Kconfig  idf_component.yml  ntp_client.cpp
components/netham45__ntp/include/: ntp_client.h
components/netham45__spdif_out/: CMakeLists.txt  README.md  idf_component.yml  spdif_out.c
components/netham45__spdif_out/include/: spdif_out.h
components/netham45__usb_in/: CMakeLists.txt  idf_component.yml  usb_in.c
components/netham45__usb_in/include/: usb_in.h
components/netham45__usb_out/: Kconfig  README.md  idf_component.yml  usb_out.c
components/netham45__usb_out/include/: usb_out.h
components/netham45__usb_uac_device_in/: Kconfig  README.md  usb_in.c
components/netham45__usb_uac_device_in/include/: usb_in.h
components/netham45__usb_uac_host_out/: CMakeLists.txt
components/netham45__visualizer/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  pcm_visualizer.c
components/netham45__visualizer/include/: pcm_visualizer.h
components/netham45__wifi_manager/: CMakeLists.txt  idf_component.yml  wifi_manager.c
components/netham45__wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  build_config.h  config.h  esp32-rtp.c  global.h  idf_component.yml  increment_version.py  lifecycle_manager.c  lifecycle_manager.c_old  lifecycle_manager.h  version.h
main/TS3USB30ERSWR/: usb_switch.c
main/bq25895/: bq25895.h  bq25895_integration.c  bq25895_integration.h  bq25895_json.h  bq25895_web.c
main/config/: config_manager.c  config_manager.h
main/lifecycle/: config.c  config.h  hw_init.c  hw_init.h  lifecycle_internal.h  lifecycle_wifi_adapter.c  lifecycle_wifi_adapter.h  modes.c  modes.h  reconfig.c  reconfig.h  sap.c  sap.h  services.c  services.h  sleep.c  sleep.h  state_machine.c  state_machine.h
main/logging/: log_buffer.c  log_buffer.h
main/mdns/: mdns_discovery.c  mdns_discovery.h  mdns_service.c  mdns_service.h
main/ntp/: ntp_client.cpp
main/ota/: ota_manager.c  ota_manager.h
main/pairing/: pairing_manager.c  pairing_manager.h
main/receiver/: audio_out.c  audio_out.h  buffer.c  buffer.h  network_in.c  network_in.h  rtcp_receiver.c  rtcp_receiver.h  rtcp_types.h  sap_listener.c  sap_listener.h  spdif_out.c  spdif_out.h  usb_out.c  usb_out.h
main/sender/: network_out.c  network_out.h  usb_in.c  usb_in.h
main/sender/spdif_in/: README.md  spdif_in.c  spdif_in.h
main/visualizer/: led_strip_controller.c  led_strip_controller.h  pcm_visualizer.h  visualizer_task.c  visualizer_task.h
main/web/: bq25895.css  bq25895.html  bq25895.js  index.html  sap.html  sap.js  scream_devices_handler_fix.c  script.js  spdif_stats.html  spdif_stats.js  styles.css  web_server.c  wizard.css  wizard.html  wizard.js
main/web/routes/: battery_routes.c  battery_routes.h  captive_portal_routes.c  captive_portal_routes.h  discovery_routes.c  discovery_routes.h  logs_routes.c  logs_routes.h  ota_routes.c  ota_routes.h  pairing_routes.c  pairing_routes.h  route_helpers.c  route_helpers.h  routes.c  routes.h  sap_routes.c  sap_routes.h  settings_routes.c  settings_routes.h  static_routes.c  static_routes.h  wifi_routes.c  wifi_routes.h
main/wifi/: wifi_manager.c  wifi_manager.h
